# new_homeworks

./: README.md
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py  main.py
homework_05/static/css/: main.css
homework_05/templates/lists/: about.html
homework_06/: .dockerignore  .gitignore  Dockerfile-local  app.py  docker-compose.yaml  pyproject.toml
homework_06/static/css/: loading-icon.css
homework_06/templates/: base.html  index.html
