[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["benderprog <bender_prog@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
Flask-SQLAlchemy = "^3.1.1"
Werkzeug = "^2.3.7"
Jinja2 = "^3.1.2"
black = "^23.9.1"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
